objects/ID_Cards__c.object
<CustomObject>
    <fields>
        <fullName>Account_Demo__c</fullName>
        <formula>Implementation_Tracking_ID__r.Account_Demo__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Demo</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Account_Legal_Name__c</fullName>
        <formula>IF( ISBLANK( Implementation_Tracking_ID__r.Account_Legal_Name__r.Id ), &apos;&apos;, HYPERLINK(Implementation_Tracking_ID__r.Account_Legal_Name__r.Id, Implementation_Tracking_ID__r.Account_Legal_Name__r.Name))</formula>
        <label>Account Legal Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>ID_Cards3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account_legal_NameText__c</fullName>
        <formula>Implementation_Tracking_ID__r.Account_Legal_Name__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account legal Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Actual_ID_Counts__c</fullName>
        <label>Actual ID Counts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Additional_Comments__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Additional Comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Anthem_Entity__c</fullName>
        <formula>TEXT( Implementation_Tracking_ID__r.Account_Legal_Name__r.Anthem_Entity__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Anthem Entity</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ApprovalStatus__c</fullName>
        <label>ApprovalStatus</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Approved2</fullName>
                </value>
                <value>
                    <fullName>Approved1</fullName>
                </value>
                <value>
                    <fullName>Rejected1</fullName>
                </value>
                <value>
                    <fullName>Rejected2</fullName>
                </value>
                <value>
                    <fullName>To_AM_Approved</fullName>
                    <label>To AM Approved</label>
                </value>
                <value>
                    <fullName>To_AM_Rejected</fullName>
                    <label>To AM Rejected</label>
                </value>
                <value>
                    <fullName>To AI Approved</fullName>
                </value>
                <value>
                    <fullName>To AI Rejected</fullName>
                </value>
                <value>
                    <fullName>Submitted to AI 2nd approval</fullName>
                </value>
                <value>
                    <fullName>Submitted to PA</fullName>
                </value>
                <value>
                    <fullName>Approved2Peer</fullName>
                </value>
                <value>
                    <fullName>Rejected2Peer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Approval_Rejections__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Approval Rejections</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Approval_Submitter__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approval Submitter</label>
        <referenceTo>User</referenceTo>
        <relationshipName>ID_Cards4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Approved_Date_Completed__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Approved_Date_Completed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Assigned_Implementer_Name__c</fullName>
        <formula>Implementation_Tracking_ID__r.Assigned_Implementer__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Assigned Implementer Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assigned_Implementer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assigned Implementer</label>
        <referenceTo>User</referenceTo>
        <relationshipName>ID_Cards2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AutorabitExtId__c</fullName>
        <description>External Id created by AutoRABIT</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>AutorabitExtId__c</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CI_Case_Activated__c</fullName>
        <label>CI Case Activated</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Case_Install_Stage__c</fullName>
        <formula>TEXT(Case_Installation__r.Stage__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Install Stage</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Installation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case Installation</label>
        <referenceTo>Issue_Control__c</referenceTo>
        <relationshipLabel>ID Cards</relationshipLabel>
        <relationshipName>ID_Cards</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Claim_System__c</fullName>
        <formula>Implementation_Tracking_ID__r.Claim_System__c</formula>
        <label>Claim System</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_SME_time__c</fullName>
        <formula>IF( 
ISBLANK(Approved_Date_Completed__c),((Now() - In_Progress_Date_Completed__c) - Pending_Correction_Time__c) , 
((Approved_Date_Completed__c - In_Progress_Date_Completed__c) - Pending_Correction_Time__c)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current SME time</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Custom_ID_Card_Required__c</fullName>
        <formula>IF(Implementation_Tracking_ID__r.Implementation_Record_ID__r.Custom_ID_Cards__c, &apos;Yes&apos;, &apos;No&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Custom ID Card Required</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Custom_Template_created_Vendor_tool__c</fullName>
        <label>Custom Template created (Vendor tool)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Date_Changes_Moved_To_Production__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date Changes Moved To Production</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_ID_Card_Ordered__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date ID card Released</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_ID_Card_Reqs_Received_Customized__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date Custom ID Card Req. Received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_ID_Card_Requirements_Approved__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date ID Card Requirements Approved</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_ID_Card_Requirements_Received__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date ID Card Requirements Received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_ID_Card_Requirements_Sent_To_IC__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date ID Card Requirements Sent To IC</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Implementations_Notified_Of_Sale__c</fullName>
        <formula>Implementation_Tracking_ID__r.Date_Implementations_Notified_Of_Sale__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Date Implementations Notified Of Sale</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Mockup_Audit_Completed__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date Mockup Audit Completed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Mockup_Audit_Requested__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date Peer Mockup Audit Requested</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Mockups_Approved_Customized__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date Custom Template Approved</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Mockups_Approved__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date Mockups Approved</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Mockups_Loaded_To_SharePoint__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date Mockups Loaded To SharePoint</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Of_First_Mailing_Customized__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date Of First Mailing(Customized)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Of_First_Mailing__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date Of First Mailing</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Of_ID_BA_Prod_Audit__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date Of ID BA Prod Audit</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Of_Imp_Sales_RA_Prod_Audit__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date Of Imp/Sales/RA Prod Audit</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Of_Last_Mailing__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date Of Last Mailing</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_PSI_Hold_Removed__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date PSI Hold Removed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Peer_Mockup_Audit_Completed__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date Peer Mockup Audit Completed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Req_Received_for_Prod_Customized__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date Custom Template Moved To Production</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Suppressed__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date Suppressed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Suppression_Removed__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date Suppression Removed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Test_Cards_Approved__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date Test Cards Approved</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Vendor_Hold_Loaded__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date Vendor Hold Loaded</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Web_Tool_Loaded__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date Web Tool Loaded</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Days_From_Assignment__c</fullName>
        <formula>Implementation_Tracking_ID__r.Days_From_Assignment__c</formula>
        <label>Days From Assignment</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Delivery_Options__c</fullName>
        <label>Delivery Option</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>USPS delivery</fullName>
                    <default>true</default>
                    <label>USPS delivery</label>
                </value>
                <value>
                    <fullName>E-delivery</fullName>
                </value>
                <value>
                    <fullName>UPS – Ground (physical address required)</fullName>
                </value>
                <value>
                    <fullName>FedEx – overnight (physical address required)</fullName>
                </value>
                <value>
                    <fullName>USPS delivery (default to USPS delivery)</fullName>
                    <isActive>false</isActive>
                    <label>USPS delivery (default to USPS delivery)</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EmployerAccessFromMembership__c</fullName>
        <formula>IF(TEXT(Membership__r.Ongoing_Enrollment_Submission_Type__c) = &apos;Employer Access&apos;, &apos;Yes&apos;, &apos;No&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Employer Access</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employer_Access__c</fullName>
        <label>Employer Access</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Estimated_ID_Card_Count__c</fullName>
        <label>Estimated ID Card Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Estimated_Mail_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Estimated Mail Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Estimated_Membership_File_Load_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Estimated Membership File Load Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Estimated_Order_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Estimated Order Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Expected_Membership__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Expected Membership</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field_Update__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Field Update</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Group_Number__c</fullName>
        <formula>IF( ISBLANK( Implementation_Tracking_ID__r.Group_Number__r.Id ), &apos;&apos;, HYPERLINK(Implementation_Tracking_ID__r.Group_Number__r.Id, Implementation_Tracking_ID__r.Group_Number__r.Name))</formula>
        <label>Group Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Group_Number_impTracking__c</fullName>
        <formula>Implementation_Tracking_ID__r.Group_Number__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Group Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Group_Record_ID__c</fullName>
        <formula>Implementation_Tracking_ID__r.Group_Number__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Group Record ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Group_Size__c</fullName>
        <formula>Implementation_Tracking_ID__r.Group_Size__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Group Size</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HQ_State__c</fullName>
        <description>Stores the HQ State.</description>
        <formula>TEXT(Implementation_Tracking_ID__r.Account_Legal_Name__r.HQ_State__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HQ State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hold_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Hold Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Hold_Remove_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Hold Remove Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IDCardID__c</fullName>
        <formula>Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IDCardID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IDCards_Check__c</fullName>
        <description>US18519</description>
        <formula>IF( 
AND( 
Implementation_Tracking_ID__r.SBC_Approved__c,
 
Implementation_Tracking_ID__r.UW_Approved__c, 
Implementation_Tracking_ID__r.UW_Life_Disability_Approved__c, 
Implementation_Tracking_ID__r.UW_Medical_Approved__c, 
Implementation_Tracking_ID__r.UW_Vision_Approved__c ,
 
Implementation_Tracking_ID__r.InterPlan_Approved__c, 
Implementation_Tracking_ID__r.Dental_Complete_Approved__c , 
Implementation_Tracking_ID__r.Vision_Approved__c, 
Implementation_Tracking_ID__r.Medical_Benefits_Approved__c, 
Implementation_Tracking_ID__r.RX_Approved__c, 
Implementation_Tracking_ID__r.Issue_Control_Approved__c, 
Implementation_Tracking_ID__r.Enrollment_and_Billing_Approved__c ), 
True, False)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IDCards Check</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ID_Card_Change_Type__c</fullName>
        <label>ID Card Type of Change</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Adding Products</fullName>
                </value>
                <value>
                    <fullName>Adding Sub-groups</fullName>
                </value>
                <value>
                    <fullName>Copay Change(s)</fullName>
                </value>
                <value>
                    <fullName>Eligibility Vendor Change</fullName>
                </value>
                <value>
                    <fullName>Group Termination</fullName>
                </value>
                <value>
                    <fullName>ID Card Carrier Change(re:Engage)</fullName>
                </value>
                <value>
                    <fullName>Logo Change</fullName>
                </value>
                <value>
                    <fullName>Misc. Changes</fullName>
                </value>
                <value>
                    <fullName>Multiple Changes</fullName>
                </value>
                <value>
                    <fullName>New Account</fullName>
                </value>
                <value>
                    <fullName>Phone Number Changes</fullName>
                </value>
                <value>
                    <fullName>Plan Name Changes</fullName>
                </value>
                <value>
                    <fullName>Sub-Group Termination</fullName>
                </value>
                <value>
                    <fullName>Other - No ID card impact</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ID_Card_Generation_Type_Details__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>ID Card Generation Type Details</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID_Card_Generation_Type__c</fullName>
        <label>ID Card Generation Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Member Level</fullName>
                </value>
                <value>
                    <fullName>Subscriber Level</fullName>
                </value>
                <value>
                    <fullName>Both</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ID_Card_Hold_Required__c</fullName>
        <inlineHelpText>The hold in Clarity is to stop the generation of the ID cards once the file from WGS is received</inlineHelpText>
        <label>ID Card Hold Required</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ID_Card_Issue_Level__c</fullName>
        <label>ID Card Issue Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Daily Maintenance</fullName>
                </value>
                <value>
                    <fullName>Full Client Issuance</fullName>
                </value>
                <value>
                    <fullName>Partial Re-Issue</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ID_Card_Issued_Order_Level__c</fullName>
        <label>ID Card Issued Order Level</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Mass Order</fullName>
                </value>
                <value>
                    <fullName>Partial Order</fullName>
                </value>
                <value>
                    <fullName>Auto-generate</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ID_Card_Order_Re_triggered_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>ID Card Re-triggered</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ID_Card_Overall_Status1__c</fullName>
        <formula>TEXT(ID_Card_Overall_Status__c)</formula>
        <label>ID Card Overall Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID_Card_Overall_Status__c</fullName>
        <label>ID Card Overall Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active - Red</fullName>
                </value>
                <value>
                    <fullName>Active - Green</fullName>
                </value>
                <value>
                    <fullName>Active - Yellow</fullName>
                </value>
                <value>
                    <fullName>Complete - Red</fullName>
                </value>
                <value>
                    <fullName>Complete - Green</fullName>
                </value>
                <value>
                    <fullName>Complete - Yellow</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ID_Card_Special_Instructions__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>ID Card Special Instructions</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ID_Cards_Hy__c</fullName>
        <formula>HYPERLINK(LEFT($Api.Partner_Server_URL_340, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_340)) &amp; Id, Name)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ID Cards Hy</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID_Cards_Requested__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>ID Cards Requested</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ID_Cards_Trigger__c</fullName>
        <label>ID Cards Triggered</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ID_Cards_Triggered__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>ID Cards Triggered</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ID_Requirements_Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ID Requirements Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ID_Url__c</fullName>
        <formula>LEFT($Api.Partner_Server_URL_340, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_340)) &amp; Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ID Url</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID_card_Approved_Date__c</fullName>
        <description>Used for OS</description>
        <encryptionScheme>None</encryptionScheme>
        <label>ID card Approved Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ITID__c</fullName>
        <formula>Implementation_Tracking_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ITID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>If_Custom_Microsite_List_Website__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>If Custom Microsite, List Website</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ImplementationRecordID__c</fullName>
        <formula>Implementation_Tracking_ID__r.Implementation_Record_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ImplementationRecordID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Implementation_Case_Name_Non_Hyperlink__c</fullName>
        <formula>Implementation_Tracking_ID__r.Implementation_Case_Name_Non_Hyperlink__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Implementation Case Name Non Hyperlink</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Implementation_Case_Name__c</fullName>
        <formula>Implementation_Tracking_ID__r.Implementation_Case_Name1__c</formula>
        <label>Implementation Case Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Implementation_Case_Start_Date__c</fullName>
        <description>This field refers to the Implementation Case Start Date field of the related Implementation Case.</description>
        <formula>Implementation_Tracking_ID__r.Implementation_Record_ID__r.EffectiveDate</formula>
        <label>Implementation Case Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Implementation_Case_Topic__c</fullName>
        <formula>Implementation_Tracking_ID__r.Implementation_Record_ID__r.Implementation_Case_Topic__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Implementation Case Topic</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Implementation_Effective_Date__c</fullName>
        <formula>Implementation_Tracking_ID__r.Implementation_Effective_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Implementation Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Implementation_Record_ID_Non_hyperlink__c</fullName>
        <formula>Implementation_Tracking_ID__r.Implementation_Record_ID__r.OrderNumber</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Implementation Record ID(Non hyperlink)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Implementation_Record_ID__c</fullName>
        <formula>HYPERLINK(    Implementation_Tracking_ID__r.Implementation_Record_ID__c  , Implementation_Tracking_ID__r.Implementation_Record_ID__r.OrderNumber )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Implementation Record ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Implementation_Tracking_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Implementation Tracking ID</label>
        <referenceTo>Implementation_Tracking__c</referenceTo>
        <relationshipLabel>ID Cards</relationshipLabel>
        <relationshipName>ID_Cards</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Implementation_Type__c</fullName>
        <formula>Implementation_Tracking_ID__r.Implementation_Type__c</formula>
        <label>Implementation Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>In_Progress_Date_Completed__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>In_Progress_Date_Completed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Is_A_Client_Logo_Needed__c</fullName>
        <label>Is A Client Logo Needed</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_Acct_Mgmt_Requirement_Approval_Req__c</fullName>
        <label>Is Acct Mgmt Requirement Approval Req</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_ID_Card_General_Info_Applicable__c</fullName>
        <label>Is ID Card General Info Applicable</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_ID_Card_Req_Details_Applicable__c</fullName>
        <label>Is ID Card Req Details  Applicable</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_ID_Card_Req_Gathering_Applicable__c</fullName>
        <label>Is ID Card Req Gathering Applicable</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_Owner_the_Logged_in_user__c</fullName>
        <formula>IF(Owner:User.Id == $User.Id,True,False)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Owner the Logged in user</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Peer_ID_Card_Requirement_Approval_Req__c</fullName>
        <label>Is Peer ID Card Requirement Approval Req</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>